# c-utils

./: CMakeLists.txt
.github/workflows/: gcovr.yaml
cmake/: CatchTest.cmake  CheckTest.cmake  FindCheck.cmake  GTest.cmake  Test.cmake
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt  algorithm.c  algorithm.h
src/algorithm/tests/: CMakeLists.txt  algorithm.cxx
src/file/: CMakeLists.txt  fileio.c
src/heap/: CMakeLists.txt  cutils_heap.h  cutils_heap_private.h  heap.c
src/heap/tests/: CMakeLists.txt  heap_test.c
